--- a/src/template/template.html
+++ b/src/template/template.html
@@ -14,19 +14,19 @@
 		<br>
 		<br>
 		<div id="luogoData">
-			<p>Modena, $data</p>
+			<p>Modena, $dataCorrente</p>
 		</div>
 		<div id="numero">
-			<p>Circ. interna n $circolare</p>
+			<p>Circ. interna n $numeroCircolare</p>
 		</div>
 		<div id="tipo">
 			<p>Oggetto  correzione variazione temporanea orario curricolare classi </p>
-			<p>Si comunica alle famiglie, ai docenti, al personale ATA che il giorno $data le classi</p>
+			<p>Si comunica alle famiglie, ai docenti, al personale ATA che il giorno $dataCircolare le classi</p>
 			<p>effettueranno le seguenti modifiche al proprio orario curricolare:</p>
 		</div>
 		<table border="1" cellspacing="0" width="500" align="center">
 			<tr><td>CLASSE</td><td>ENTRATA / USCITA</td><td>ORE</td><td>MOTIVAZIONE</td></tr>
-			<tr><td>$classe</td><td>$entusc</td><td>$ore</td><td>$motivo</td></tr>
+			<tr><td>$classe</td><td>$tipo</td><td>$ore</td><td>$motivazione</td></tr>
 		</table>
 		<div id="dirigente">
 			<p>Il Dirigente Scolastico</p>
